Trying to fix mobile image stretching

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -121,6 +121,10 @@ h2{
     text-shadow: none;
     /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   }
+
+  .proj2img{
+    background-image: url("/images/project2.png");
+  }
   
   
 /*
